All: Make version.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,44 @@ set(LIB_VERSION_PATCH 2)
 set(LIB_VERSION_ABI 0.2)
 set(LIB_VERSION_STRING ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})
 
+execute_process(COMMAND git describe --always --abbrev=40 --dirty OUTPUT_VARIABLE GIT_COMMIT OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND git describe --always --dirty OUTPUT_VARIABLE GIT_COMMIT_SHORT OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND git symbolic-ref --short HEAD OUTPUT_VARIABLE GIT_BRANCH OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND git rev-list HEAD --count OUTPUT_VARIABLE GIT_REV OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+if(GIT_REV STREQUAL "")
+	set(GIT_REV -1)
+endif()
+if(GIT_BRANCH STREQUAL "")
+	set(VERSION_STRING ${LIB_VERSION_STRING})
+else()
+	if(GIT_BRANCH STREQUAL "master")
+		set(VERSION_STRING ${GIT_REV}-${GIT_COMMIT_SHORT})
+	else()
+		set(VERSION_STRING ${GIT_BRANCH}-${GIT_REV}-${GIT_COMMIT_SHORT})
+	endif()
+
+	if(NOT LIB_VERSION_ABI STREQUAL GIT_BRANCH)
+		set(VERSION_STRING ${LIB_VERSION_ABI}-${VERSION_STRING})
+	endif()
+endif()
+
+add_custom_target(version ALL touch ${CMAKE_SOURCE_DIR}/src/util/version.c.in
+	COMMAND ${CMAKE_COMMAND}
+	-DGIT_COMMIT=${GIT_COMMIT}
+	-DGIT_COMMIT_SHORT=${GIT_COMMIT_SHORT}
+	-DGIT_BRANCH=${GIT_BRANCH}
+	-DGIT_REV=${GIT_REV}
+	-DBINARY_NAME=${BINARY_NAME}
+	-DPROJECT_NAME=${PROJECT_NAME}
+	-DVERSION_STRING=${VERSION_STRING}
+	-D${BINARY_NAME}_SOURCE_DIR=${CMAKE_SOURCE_DIR}
+	-P ${CMAKE_SOURCE_DIR}/version.cmake
+	WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+include(${CMAKE_SOURCE_DIR}/version.cmake)
+list(APPEND UTIL_SRC ${CMAKE_BINARY_DIR}/version.c)
+
 # Advanced settings
 set(BUILD_LTO ON CACHE BOOL "Build with link-time optimization")
 set(BUILD_PGO OFF CACHE BOOL "Build with profiling-guided optimization")
@@ -94,8 +132,6 @@ elseif(BUILD_PGO AND PGO_STAGE_2)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PGO_POST_FLAGS}")
 	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${PGO_POST_FLAGS}")
 endif()
-
-add_definitions(-DBINARY_NAME="${BINARY_NAME}" -DPROJECT_NAME="${PROJECT_NAME}" -DPROJECT_VERSION="${LIB_VERSION_STRING}")
 
 # Feature dependencies
 set(FEATURES)
@@ -327,12 +363,15 @@ if(BUILD_SHARED)
 		add_library(${BINARY_NAME}-static STATIC ${SRC})
 		set_target_properties(${BINARY_NAME}-static PROPERTIES COMPILE_DEFINITIONS "${FEATURE_DEFINES}")
 		install(TARGETS ${BINARY_NAME}-static DESTINATION lib COMPONENT lib${BINARY_NAME})
+		add_dependencies(${BINARY_NAME}-static version)
 	endif()
 else()
 	add_library(${BINARY_NAME} STATIC ${SRC})
 endif()
 
-target_link_libraries(${BINARY_NAME} m ${DEBUGGER_LIB} ${DEPENDENCY_LIB} ${OS_LIB})
+add_dependencies(${BINARY_NAME} version)
+
+target_link_libraries(${BINARY_NAME} m ${DEBUGGER_LIB} ${OS_LIB} ${DEPENDENCY_LIB})
 install(TARGETS ${BINARY_NAME} DESTINATION lib COMPONENT lib${BINARY_NAME})
 set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_ABI} COMPILE_DEFINITIONS "${FEATURE_DEFINES}")
 
