All: Set cpack version string to newly generated string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -409,6 +409,7 @@ if(BUILD_PERF)
 endif()
 
 # Packaging
+set(CPACK_PACKAGE_VERSION ${VERSION_STRING})
 set(CPACK_PACKAGE_VERSION_MAJOR ${LIB_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${LIB_VERSION_MINOR})
 set(CPACK_PACKAGE_VERSION_PATCH ${LIB_VERSION_PATCH})
