--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -7,7 +7,7 @@ if (SDL_VERSION EQUAL "2")
 	if (SDL2_FOUND)
 		set(SDL_INCLUDE_DIR ${SDL2_INCLUDE_DIRS})
 		set(SDL_LIBRARY ${SDL2_LIBRARIES})
-		set(SDLMAIN_LIBRARY)
+		set(SDLMAIN_LIBRARY "")
 		link_directories(${SDL2_LIBDIR})
 		set(SDL_VERSION_DEBIAN "2-2.0-0")
 	endif()
@@ -33,6 +33,9 @@ endif()
 
 if(WIN32)
 	list(APPEND SDL_LIBRARY imm32 version winmm)
+elseif(APPLE)
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework AppKit -framework AudioUnit -framework Carbon -framework CoreAudio -framework ForceFeedback -framework IOKit")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}" PARENT_SCOPE)
 endif()
 
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libsdl${SDL_VERSION_DEBIAN}" PARENT_SCOPE)
