--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -66,10 +66,12 @@ if(BUILD_PANDORA)
 else()
 	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl.c)
 	if(BUILD_GL)
+		find_package(OpenGL)
+	endif()
+	if(OPENGL_FOUND)
 		list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/gl-sdl.c)
 		list(APPEND PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/opengl/gl.c)
 		add_definitions(-DBUILD_GL)
-		find_package(OpenGL REQUIRED)
 		include_directories(${OPENGL_INCLUDE_DIR})
 	endif()
 endif()
