--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -203,7 +203,7 @@ else
 	CC = gcc
 	CXX = g++
 	SHARED := -shared -static-libgcc -static-libstdc++ -Wl,-no-undefined -Wl,-version-script=link.T
-	DEFINES += -std=c99
+	DEFINES += -std=c99 -DDISABLE_THREADING
 
 endif
 
