--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,14 @@ if(BUILD_BBB OR BUILD_RASPI OR BUILD_PANDORA)
 	endif()
 endif()
 
+if(WII)
+	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-file.c)
+	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
+	file(GLOB WII_SRC ${CMAKE_SOURCE_DIR}/src/platform/wii/*.c)
+	add_executable(${BINARY_NAME}.elf ${WII_SRC})
+	target_link_libraries(${BINARY_NAME}.elf ${BINARY_NAME} fat ogc)
+endif()
+
 if(BUILD_PANDORA)
 	add_definitions(-DBUILD_PANDORA)
 endif()
