--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,7 +207,9 @@ if(WII)
 	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	file(GLOB WII_SRC ${CMAKE_SOURCE_DIR}/src/platform/wii/*.c)
 	add_executable(${BINARY_NAME}.elf ${WII_SRC})
-	target_link_libraries(${BINARY_NAME}.elf ${BINARY_NAME} fat ogc)
+	list(APPEND OS_LIB fat ogc)
+	target_link_libraries(${BINARY_NAME}.elf ${BINARY_NAME} ${OS_LIB})
+	add_custom_command(TARGET ${BINARY_NAME}.elf POST_BUILD COMMAND ${ELF2DOL} ${BINARY_NAME}.elf ${BINARY_NAME}.dol)
 endif()
 
 if(BUILD_PANDORA)
