Wii: Bring Wii port in line with other ports

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,12 @@ elseif(UNIX)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-fd.c ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-dirent.c)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
+elseif(WII)
+	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-file.c)
+	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
+	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/wii/wii-*.c)
+	list(APPEND OS_LIB fat ogc)
+	source_group("Wii-specific code" FILES ${OS_SRC})
 endif()
 
 if(APPLE)
@@ -203,11 +209,7 @@ if(BUILD_BBB OR BUILD_RASPI OR BUILD_PANDORA)
 endif()
 
 if(WII)
-	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-file.c)
-	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
-	file(GLOB WII_SRC ${CMAKE_SOURCE_DIR}/src/platform/wii/*.c)
-	add_executable(${BINARY_NAME}.elf ${WII_SRC})
-	list(APPEND OS_LIB fat ogc)
+	add_executable(${BINARY_NAME}.elf ${CMAKE_SOURCE_DIR}/src/platform/wii/main.c)
 	target_link_libraries(${BINARY_NAME}.elf ${BINARY_NAME} ${OS_LIB})
 	add_custom_command(TARGET ${BINARY_NAME}.elf POST_BUILD COMMAND ${ELF2DOL} ${BINARY_NAME}.elf ${BINARY_NAME}.dol)
 endif()
