Wii: Use generic VFileOpen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,7 +182,7 @@ elseif(UNIX)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 elseif(WII)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-file.c)
-	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
+	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5 -DUSE_VFS_FILE)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/wii/wii-*.c)
 	list(APPEND OS_LIB fat ogc)
 	source_group("Wii-specific code" FILES ${OS_SRC})
