--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -1,5 +1,6 @@
 DEBUG = 0
 GIT_VERSION := $(shell git describe --abbrev=4 --dirty --always --tags)
+HAVE_VFS_FD := 1
 
 ifneq ($(EMSCRIPTEN),)
 	platform = emscripten
@@ -114,6 +115,7 @@ else ifeq ($(platform), ps3)
 	PLATFORM_DEFINES := -D__CELLOS_LV2__
 	STATIC_LINKING = 1
 	DEFINES += -std=c99
+	HAVE_VFS_FD = 0
 
 # sncps3
 else ifeq ($(platform), sncps3)
@@ -124,6 +126,7 @@ else ifeq ($(platform), sncps3)
 	PLATFORM_DEFINES := -D__CELLOS_LV2__
 	STATIC_LINKING = 1
 	DEFINES += -std=c99
+	HAVE_VFS_FD = 0
 
 # Lightweight PS3 Homebrew SDK
 else ifeq ($(platform), psl1ght)
@@ -134,6 +137,7 @@ else ifeq ($(platform), psl1ght)
 	PLATFORM_DEFINES := -D__CELLOS_LV2__
 	STATIC_LINKING = 1
 	DEFINES += -std=c99
+	HAVE_VFS_FD = 0
 
 # PSP
 else ifeq ($(platform), psp1)
@@ -156,6 +160,7 @@ else ifeq ($(platform), xenon)
 	PLATFORM_DEFINES := -D__LIBXENON__
 	STATIC_LINKING = 1
 	DEFINES += -std=c99
+	HAVE_VFS_FD = 0
 
 # Nintendo Game Cube
 else ifeq ($(platform), ngc)
@@ -166,6 +171,7 @@ else ifeq ($(platform), ngc)
 	PLATFORM_DEFINES += -DGEKKO -DHW_DOL -mrvl -mcpu=750 -meabi -mhard-float
 	STATIC_LINKING = 1
 	DEFINES += -std=c99
+	HAVE_VFS_FD = 0
 
 # Nintendo Wii
 else ifeq ($(platform), wii)
@@ -176,6 +182,7 @@ else ifeq ($(platform), wii)
 	PLATFORM_DEFINES += -DGEKKO -DHW_RVL -mrvl -mcpu=750 -meabi -mhard-float
 	STATIC_LINKING = 1
 	DEFINES += -std=c99
+	HAVE_VFS_FD = 0
 
 # ARM
 else ifneq (,$(findstring armv,$(platform)))
