OpenGL: Create video backend for GLES2, used on Raspberry Pi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(BUILD_PERF OFF CACHE BOOL "Build performance profiling tool")
 set(BUILD_STATIC OFF CACHE BOOL "Build a static library")
 set(BUILD_SHARED ON CACHE BOOL "Build a shared library")
 set(BUILD_GL ON CACHE STRING "Build with OpenGL")
+set(BUILD_GLES2 OFF CACHE STRING "Build with OpenGL|ES 2")
 file(GLOB ARM_SRC ${CMAKE_SOURCE_DIR}/src/arm/*.c)
 file(GLOB GBA_SRC ${CMAKE_SOURCE_DIR}/src/gba/*.c)
 file(GLOB GBA_CHEATS_SRC ${CMAKE_SOURCE_DIR}/src/gba/cheats/*.c)
@@ -122,10 +123,11 @@ if(CMAKE_SYSTEM_NAME MATCHES .*BSD)
 else()
 	find_feature(USE_CLI_DEBUGGER "libedit")
 endif()
-if(BUILD_GL)
+if(BUILD_GL OR BUILD_GLES2)
 	find_package(OpenGL QUIET)
 	if(NOT OPENGL_FOUND)
-		set(BUILD_GL OFF)
+		set(BUILD_GL OFF CACHE BOOL "OpenGL not found" FORCE)
+		set(BUILD_GLES2 OFF CACHE BOOL "OpenGL|ES 2 not found" FORCE)
 	endif()
 endif()
 find_feature(USE_FFMPEG "libavcodec;libavformat;libavresample;libavutil;libswscale")
@@ -174,6 +176,10 @@ if(BUILD_BBB OR BUILD_RASPI OR BUILD_PANDORA)
 	if(NOT BUILD_EGL)
 		add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	endif()
+endif()
+
+if(BUILD_RASPI)
+	set(BUILD_GL OFF CACHE BOOL "OpenGL not supported" FORCE)
 endif()
 
 if(BUILD_PANDORA)
@@ -396,6 +402,10 @@ set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SO
 
 if(BUILD_GL)
 	add_definitions(-DBUILD_GL)
+endif()
+
+if(BUILD_GLES2)
+	add_definitions(-DBUILD_GLES2)
 endif()
 
 if(BUILD_LIBRETRO)
