All: Find GLESv2 separately from GL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,10 +123,16 @@ if(CMAKE_SYSTEM_NAME MATCHES .*BSD)
 else()
 	find_feature(USE_CLI_DEBUGGER "libedit")
 endif()
-if(BUILD_GL OR BUILD_GLES2)
+if(BUILD_GL)
 	find_package(OpenGL QUIET)
 	if(NOT OPENGL_FOUND)
 		set(BUILD_GL OFF CACHE BOOL "OpenGL not found" FORCE)
+	endif()
+endif()
+if(BUILD_GLES2 AND NOT BUILD_RASPI)
+	find_path(OPENGLES2_INCLUDE_DIR NAMES GLES2/gl2.h)
+	find_library(OPENGLES2_LIBRARY NAMES GLESv2 GLESv2_CM)
+	if(NOT OPENGLES2_INCLUDE_DIR OR NOT OPENGLES2_LIBRARY)
 		set(BUILD_GLES2 OFF CACHE BOOL "OpenGL|ES 2 not found" FORCE)
 	endif()
 endif()
