--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -34,7 +34,13 @@ endif()
 find_package(Qt5OpenGL)
 find_package(Qt5Widgets)
 
-if(NOT Qt5OpenGL_FOUND OR NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
+if(NOT BUILD_GL AND NOT BUILD_GLES2)
+	message(WARNING "OpenGL is required to build the Qt port")
+	set(BUILD_QT OFF PARENT_SCOPE)
+	return()
+endif()
+
+if(NOT Qt5OpenGL_FOUND OR NOT Qt5Widgets_FOUND)
 	message(WARNING "Cannot find Qt modules")
 	set(BUILD_QT OFF PARENT_SCOPE)
 	return()
