--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -1,4 +1,9 @@
-INCFLAGS := -I$(CORE_DIR) -I$(CORE_DIR)/arm
+INCFLAGS     := -I$(CORE_DIR) -I$(CORE_DIR)/arm
+RETRODEFS := -DHAVE_STDINT_H -DHAVE_INTTYPES_H -DINLINE=inline -DCOLOR_16_BIT -DCOLOR_5_6_5 -DRESAMPLE_LIBRARY=2 -DM_PI=3.14159265358979323846 -DPATH_MAX=4096 -DBINARY_NAME=\"mgba\" -DPROJECT_VERSION=\"0.2.0\" -DPROJECT_NAME=\"mGBA\" -DSSIZE_MAX=32767
+
+ifneq ($(HAVE_VFS_FD),1)
+RETRODEFS += _DUSE_VFS_FILE
+endif
 
 SOURCES_C :=   $(CORE_DIR)/arm/arm.c \
 					$(CORE_DIR)/arm/isa-thumb.c \
