--- a/libretro-build/Makefile.android-x86_64
+++ b/libretro-build/Makefile.android-x86_64
@@ -62,7 +62,7 @@ PLATLDXFLAGS   = -shared --sysroot=$(NDK_ROOT_DIR)/platforms/android-21/arch-x86
 ################
 # libretro setup
 
-RETRODEFS     += -D__LIBRETRO__
+RETRODEFS     += -D__LIBRETRO__ -DHAVE_LOCALE
 RETROCFLAGS   =
 RETROCXXFLAGS =
 RETROLDFLAGS  =
