Change product names

--- a/libretro-build/Makefile.android-arm64_v8a
+++ b/libretro-build/Makefile.android-arm64_v8a
@@ -45,8 +45,8 @@ AR  = $(NDK_ROOT_DIR)/toolchains/aarch64-linux-android-4.9/prebuilt/$(HOST_PLATF
 ############
 # Extensions
 
-OBJEXT = .android_arm64_v8a.o
-SOEXT  = .android_arm64_v8a.so
+OBJEXT = .android-arm64_v8a.o
+SOEXT  = .android-arm64_v8a.so
 
 ################
 # Platform setup
