All: Clean up left-over dependency tracking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -435,8 +435,7 @@ if(NOT BUILD_STATIC AND NOT BUILD_SHARED)
 endif()
 
 if(BUILD_SHARED)
-	message(STATUS ${DEPENDENCY_TARGETS})
-	add_library(${BINARY_NAME} SHARED ${SRC} ${DEPENDENCY_TARGETS})
+	add_library(${BINARY_NAME} SHARED ${SRC})
 	if(BUILD_STATIC)
 		add_library(${BINARY_NAME}-static STATIC ${SRC})
 		set_target_properties(${BINARY_NAME}-static PROPERTIES COMPILE_DEFINITIONS "${FEATURE_DEFINES}")
